--- a/src/containers/Home.css
+++ b/src/containers/Home.css
@@ -16,9 +16,12 @@
 	margin-bottom: 10px;
 }
 
-# company List
+.Company-List {
+	max-height: 250px;
+	overflow-y:scroll;
+}
 
-.CompanyList {
+.YourCompany-List {
 	max-height: 250px;
 	overflow-y:scroll;
 }
@@ -34,4 +37,8 @@
 
 .DescriptionLabel {
 	text-align: left;
+}
+
+p {
+	white-space: pre-wrap
 }
